# ElectronicATE

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resource.qrc  程式架構總覽.txt
XML/: Instrument.xml
src/models/mainwindow/: mainwindowmodel.cpp  mainwindowmodel.h
src/models/page1/: page1model.cpp  page1model.h
src/models/page2/: page2model.cpp  page2model.h
src/models/page3/: page3model.cpp  page3model.h
src/models/page4/: page4model.cpp  page4model.h
src/shared/communication/: communicationfactory.cpp  communicationfactory.h  gpibcommunication.cpp  gpibcommunication.h  icommunication.h  serialcommunication.cpp  serialcommunication.h  tcpcommunication.cpp  tcpcommunication.h  testcommunicationfactory.cpp  testcommunicationfactory.h
src/shared/controller/: abstracttriggercontroller.h  dpo7000triggercontroller.cpp  dpo7000triggercontroller.h  triggercontrollerfactory.cpp  triggercontrollerfactory.h
src/shared/data/: chromaload6310spec.cpp  chromaload6310spec.h  page1config.h  page2config.h
src/shared/delegate/: navdelegate.cpp  navdelegate.h
src/shared/instrument/: iinstrumentcomm.h  instrumentbase.h  instrumentwithcommbase.cpp  instrumentwithcommbase.h
src/shared/instrument/acsource/: acsource.h  acsourcefactory.cpp  acsourcefactory.h  deltaa3000.cpp  deltaa3000.h
src/shared/instrument/dcload/: chroma6310.cpp  chroma6310.h  dcload.h  dcloadfactory.cpp  dcloadfactory.h
src/shared/instrument/oscilloscope/: dpo7000.cpp  dpo7000.h  oscilloscope.h  oscilloscopefactory.cpp  oscilloscopefactory.h
src/shared/service/: appservice.cpp  appservice.h  messageservice.cpp  messageservice.h
src/shared/style/: customerrordialog.cpp  customerrordialog.h  styleutils.cpp  styleutils.h
src/shared/widget/: dpo7000triggerwidget.cpp  dpo7000triggerwidget.h  smartstepspinbox.cpp  smartstepspinbox.h  triggerwidgetfactory.cpp  triggerwidgetfactory.h
src/shared/worker/: autotriggerworker.cpp  autotriggerworker.h
src/viewmodels/mainwindow/: mainwindowviewmodel.cpp  mainwindowviewmodel.h
src/viewmodels/page1/: page1viewmodel.cpp  page1viewmodel.h
src/viewmodels/page2/: page2viewmodel.cpp  page2viewmodel.h
src/viewmodels/page3/: page3viewmodel.cpp  page3viewmodel.h
src/viewmodels/page4/: page4viewmodel.cpp  page4viewmodel.h
src/views/mainwindow/: mainwindow.cpp  mainwindow.h
src/views/page1/: page1.cpp  page1.h
src/views/page2/: page2.cpp  page2.h
src/views/page3/: page3.cpp  page3.h
src/views/page4/: page4.cpp  page4.h
src/views/tablewidget/: tablewidget.cpp  tablewidget.h
